syntax = "proto3";

import "golem/common/uuid.proto";

package golem.cloud.token;


message TokenSecret {
  golem.common.UUID value = 1;
}
